TP_SERVICE/deploy-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deploy
  labels:
    app: myphp-frontend
    projet: myphp
spec:
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 2
      maxUnavailable: 0
  replicas: 10
  selector:
    matchLabels:
      app: myphp-frontend
  template:
    metadata:
      labels:
        app: myphp-frontend
    spec:
      #affinity:
      #  podAntiAffinity:
      #    requiredDuringSchedulingIgnoredDuringExecution:
      #    - labelSelector:
      #        matchExpressions:
      #        - key: app
      #          operator: In
      #          values:
      #          - myphp-frontend
      #      topologyKey: "kubernetes.io/hostname"
      containers:
      - name: frontend
        image: bilbloke/frontend:1.0
        ports:
        - containerPort: 80
