TP_SERVICE/svc-backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  labels:
    app: myphp-backend
    projet: myphp
spec:
  selector:
    app: myphp-backend
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
