TP_SERVICE/svc-frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: myphp-frontend
  labels:
    app: myphp-frontend
    projet: myphp
spec:
  selector:
    app: myphp-frontend
  type: NodePort
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
      nodePort: 31001
