TP_SERVICE/ingress-frontend.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ex-ingress
  labels:
    app: myphp-frontend
spec:
  rules:
    - host: myphp.formation.lan
      http:
        paths:
          - path: /index.php
            pathType: Prefix
            backend:
              service:
                name: myphp-frontend
                port:
                  number: 31001
